fix Authentication
